--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -31,7 +31,7 @@
     <string name="unknown_apps_dlg_text">"Из соображений безопасности на вашем телефоне заблокирована установка приложений, источником которых не является Android-маркет."</string>
     <string name="ok">"ОК"</string>
     <string name="settings">"Настройки"</string>
-    <string name="manage_applications">"Управлять приложениями"</string>
+    <string name="manage_applications">"Управление приложениями"</string>
     <string name="dlg_app_replacement_title">"Заменить приложение"</string>
     <string name="dlg_app_replacement_statement">"Приложение, которое вы устанавливаете, заменит другое приложение."\n\n"Все пользовательские данные будут сохранены."</string>
     <string name="dlg_sys_app_replacement_statement">"Это системное приложение. Заменить?"\n\n"Все пользовательские данные будут сохранены."</string>
