--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,10 +26,10 @@
     <string name="install_done">Application installed</string>
     <string name="install_confirm_question">Do you want to install this application?</string>
     <string name="install_failed">Application not installed</string>
-    <string name="install_failed_msg"><xliff:g id="app_name">%1$s</xliff:g> could not be installed on this phone.</string>
+    <string name="install_failed_msg"><xliff:g id="app_name">%1$s</xliff:g> could not be installed on this device.</string>
     <string name="launch">Open</string>
     <string name="unknown_apps_dlg_title">Install blocked</string>
-    <string name="unknown_apps_dlg_text">For security, your phone is set to block installation of applications not sourced in Android Market.</string>
+    <string name="unknown_apps_dlg_text">For security, your device is set to block installation of any applications.</string>
     <string name="ok">OK</string>
     <string name="settings">Settings</string>
     <string name="manage_applications">Manage applications</string>
@@ -38,14 +38,14 @@
     <!-- Dialog attributes when replacing system app -->
     <string name="dlg_sys_app_replacement_statement">This is a system application. Do you still want to replace it?\n\nAll previous user data will be saved.</string>
     <string name="out_of_space_dlg_title">Out of space</string>
-    <string name="out_of_space_dlg_text"><xliff:g id="app_name">%1$s</xliff:g> could not be viewed. Free up some space on your phone and try again.</string>
+    <string name="out_of_space_dlg_text"><xliff:g id="app_name">%1$s</xliff:g> could not be viewed. Free up some space on your device and try again.</string>
     <!-- strings related to uninstall activity -->
     <string name="dlg_ok">OK</string>
     <string name="app_not_found_dlg_title">Application not found</string>
     <string name="app_not_found_dlg_text"> The application was not
 found in the list of installed applications.</string>
     <string name="uninstall_application_question">Uninstall application?</string>
-    <string name="uninstall_application_text">This application will be removed from your phone.</string>
+    <string name="uninstall_application_text">This application will be removed from your device.</string>
     <string name="uninstalling">Uninstalling\u2026</string>
     <string name="uninstall_done">Uninstall finished!</string>
     <string name="uninstall_failed">Uninstall not successful</string>
